Add Azure deployment config and embed Angular in Spring Boot
- Remove server.servlet.context-path, add WebConfig /api prefix for RestControllers
- Embed Angular dist in src/main/resources/static (built by CI)
- Add SpaController for Angular client-side routing fallback
- Update SecurityConfig for new URL patterns
- Add application-prod.properties with Azure port config
- Add GitHub Actions workflow for CI/CD to Azure App Service

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>